--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
         "primeflex": "^3.2.1",
         "primeicons": "6.0.1",
         "primeng": "15.1.1",
-        "quill": "^1.3.7",
         "prismjs": "1.9.0",
+        "quill": "^1.3.7",
         "rxjs": "~7.5.0",
+        "sweetalert2": "^11.7.3",
         "tslib": "^2.3.0",
         "web-animations-js": "^2.3.2",
         "zone.js": "~0.11.4"
