--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
         "@fullcalendar/daygrid": "^6.0.3",
         "@fullcalendar/interaction": "^6.0.3",
         "@fullcalendar/timegrid": "^6.0.3",
+        "@types/jquery": "^2.0.47",
         "chart.js": "^3.3.2",
+        "jquery": "^3.6.4",
         "primeflex": "^3.2.1",
         "primeicons": "6.0.1",
         "primeng": "15.1.1",
@@ -47,6 +49,7 @@
         "@angular-eslint/template-parser": "^15.1.0",
         "@angular/cli": "^15.1.0",
         "@angular/compiler-cli": "^15.1.0",
+        "@types/bootstrap": "^5.2.6",
         "@types/jasmine": "~3.10.0",
         "@types/node": "^12.11.1",
         "@typescript-eslint/parser": "5.37.0",
