--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "primeicons": "6.0.1",
         "primeng": "15.1.1",
         "prismjs": "1.9.0",
+        "pusher-js": "^8.0.2",
         "quill": "^1.3.7",
         "rxjs": "~7.5.0",
         "sweetalert2": "^11.7.3",
@@ -60,6 +61,8 @@
         "karma-coverage": "~2.2.0",
         "karma-jasmine": "~4.0.0",
         "karma-jasmine-html-reporter": "~1.7.0",
+        "laravel-echo": "^1.15.0",
+        "pusher": "^5.1.2",
         "typescript": "~4.8.4"
     }
 }
