--- a/package.json
+++ b/package.json
@@ -32,17 +32,16 @@
         "primeflex": "^3.2.1",
         "primeicons": "6.0.1",
         "primeng": "15.1.1",
-        "prismjs": "1.9.0",
-        "pusher-js": "^8.0.2",
+        "prismjs": "^1.29.0",
         "quill": "^1.3.7",
         "rxjs": "~7.5.0",
-        "sweetalert2": "^11.7.3",
+        "sweetalert2": "^11.4.8",
         "tslib": "^2.3.0",
         "web-animations-js": "^2.3.2",
         "zone.js": "~0.11.4"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "~15.1.0",
+        "@angular-devkit/build-angular": "^15.2.5",
         "@angular-eslint/builder": "^15.1.0",
         "@angular-eslint/eslint-plugin": "^15.1.0",
         "@angular-eslint/eslint-plugin-template": "^15.1.0",
@@ -62,7 +61,7 @@
         "karma-jasmine": "~4.0.0",
         "karma-jasmine-html-reporter": "~1.7.0",
         "laravel-echo": "^1.15.0",
-        "pusher": "^5.1.2",
+
         "typescript": "~4.8.4"
     }
 }
