--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
         "@types/jquery": "^2.0.47",
         "chart.js": "^3.3.2",
         "jquery": "^3.6.4",
+        "ng2-img-max": "^2.2.8",
+        "ngx-image-cropper": "^6.3.2",
         "primeflex": "^3.2.1",
         "primeicons": "6.0.1",
         "primeng": "15.1.1",
@@ -61,7 +63,6 @@
         "karma-jasmine": "~4.0.0",
         "karma-jasmine-html-reporter": "~1.7.0",
         "laravel-echo": "^1.15.0",
-
         "typescript": "~4.8.4"
     }
 }
