--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "jquery": "^3.6.4",
         "ng2-img-max": "^2.2.8",
         "ngx-image-cropper": "^6.3.2",
+        "perfect-scrollbar": "^1.5.5",
         "primeflex": "^3.2.1",
         "primeicons": "6.0.1",
         "primeng": "15.1.1",
