add autocomplete to sponsors a new chat

--- a/angular.json
+++ b/angular.json
@@ -30,11 +30,14 @@
                             "src/assets"
                         ],
                         "styles": [
-                            "src/styles.scss"
+                            "src/styles.scss",
+                            "node_modules/jquery-ui/themes/base/all.css"
                         ],
                         "scripts": [
                             "node_modules/prismjs/prism.js",
-                            "node_modules/prismjs/components/prism-typescript.js"
+                            "node_modules/prismjs/components/prism-typescript.js",
+                            "node_modules/jquery/dist/jquery.min.js",
+                            "node_modules/jquery-ui/ui/widgets/datepicker.js"
                         ]
                     },
                     "configurations": {
