--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
         "@fullcalendar/daygrid": "^6.0.3",
         "@fullcalendar/interaction": "^6.0.3",
         "@fullcalendar/timegrid": "^6.0.3",
-        "@types/jquery": "^2.0.47",
         "chart.js": "^3.3.2",
-        "jquery": "^3.6.4",
+        "jquery": "^3.7.1",
+        "jquery-ui": "^1.13.2",
         "ng2-img-max": "^2.2.8",
         "ngx-image-cropper": "^6.3.2",
         "perfect-scrollbar": "^1.5.5",
@@ -54,6 +54,7 @@
         "@angular/compiler-cli": "^15.1.0",
         "@types/bootstrap": "^5.2.6",
         "@types/jasmine": "~3.10.0",
+        "@types/jquery": "^3.5.29",
         "@types/node": "^12.11.1",
         "@typescript-eslint/parser": "5.37.0",
         "eslint": "^8.23.1",
